@@ -8,7 +8,11 @@
 		<PROPERTY NAME="noWordSep" VALUE="-_" />
 	</PROPS>
 	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="FALSE" NO_WORD_SEP="-_:)">
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT3">&gt;&gt;&gt;</EOL_SPAN>
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT2">&gt;&gt;</EOL_SPAN>
 		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT1">&gt;</EOL_SPAN>
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT1">| </EOL_SPAN>
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT1">:</EOL_SPAN>
 		<SEQ TYPE="COMMENT2" DELEGATE="SIGNATURE"
 			AT_LINE_START="TRUE">-- </SEQ>
 		<SEQ TYPE="KEYWORD1">:-)</SEQ>
